2005-07-06  Nathaniel Smith  <njs@pobox.com>

	* options.hh (OPT_SET_DEFAULT): 
	* app_state.{hh,cc} (app_state::set_default):
	* monotone.cc (coptions, cpp_main): New option.
	* commands.cc (pull, push, sync): Accept it.
	(process_netsync_args): Use it.
	* tests/t_set_default.at, testsuite.at: New test.

2005-07-05  Nathaniel Smith  <njs@pobox.com>

	* debian/rules (config.status): Use bundled sqlite.
	* debian/control (Build-Depends): Remove popt and sqlite.

2005-07-05  Nathaniel Smith  <njs@pobox.com>

	* NEWS: Add timestamp.  Barring unforeseen issues, this is 0.20.

2005-07-05  Nathaniel Smith  <njs@pobox.com>

	* Makefile.am (EXTRA_DIST): Include some missed contrib/ stuff.

2005-07-05  Nathaniel Smith  <njs@pobox.com>

	* po/monotone.pot: Regenerate for release.

2005-07-05  Nathaniel Smith  <njs@pobox.com>

	* configure.ac, debian/changelog, monotone.spec: Bump version
	number.
	* UPGRADE: Update for 0.20 release.

2005-07-05  Nathaniel Smith  <njs@pobox.com>

	* ChangeLog, NEWS, AUTHORS: Fixup Eric Anderson's email address.

2005-07-05  Nathaniel Smith  <njs@pobox.com>

	* monotone.texi (Database): Note that db kill_rev_locally also
	will trigger "unreferenced manifest" warnings from db check.

2005-07-05  Nathaniel Smith  <njs@pobox.com>

	* NEWS: Oops, 'automate select' was in 0.19 after all.

2005-07-05  Nathaniel Smith  <njs@pobox.com>
	
	* contrib/ciabot_monotone.py: Fix multiple collection support.

2005-07-05  Richard Levitte  <richard@levitte.org>

	* monotone.texi (Hooks): Add space after periods where there's
	a lack of space.

	* NEWS: Correct the blurb about
	get_netsync_{read,anonymous_read,write}_permitted

2005-07-05  Nathaniel Smith  <njs@codesourcery.com>

	* NEWS: Add more explicit note on how to upgrade.

2005-07-05  Nathaniel Smith  <njs@codesourcery.com>

	* NEWS: First cut at 0.20 release notes.

2005-07-03  Matthew Gregan  <kinetik@orcon.net.nz>

	* sqlite/*, Makefile.am: Import SQLite 3.2.2 from upstream.